<resources>
    <string name="app_name">Kingsmen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">profile</string>
    <string name="username">Насиза Эмиль</string>
    <string name="phone_number">0700565809</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_register">Регистрация</string>
    <string name="weclome">Добро пожаловать</string>
    <string name="password">пароль</string>
    <string name="login">Логин</string>
    <string name="log_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="phone">Телефон</string>
    <string name="email">Почта</string>
    <string name="barbershop">Барбершоп</string>
    <string name="Setting">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="history_records">История записи</string>
    <string name="history_shop">История покупки</string>
    <string name="card">Карта лояльности</string>
    <string name="journal">Журнал</string>
    <string name="barber_name">Семён Якушев</string>
    <string name="_5">5.0</string>
    <string name="shop">Прилавок</string>
    <string name="Free_time">Свободное время</string>
    <string name="_10_00">10:00</string>
    <string name="_21_00">21:00</string>
    <string name="_20_00">20:00</string>
    <string name="_19_00">19:00</string>
    <string name="_18_00">18:00</string>
    <string name="_17_00">17:00</string>
    <string name="_16_00">16:00</string>
    <string name="_15_00">15:00</string>
    <string name="_14_00">14:00</string>
    <string name="_13_00">13:00</string>
    <string name="_12_00">12:00</string>
    <string name="_11_00">11:00</string>
    <string name="Services">Услуги</string>
    <string name="stock">Акции</string>
    <string name="haircuts">Стрижки</string>
    <string name="shaving">Бритьё</string>
    <string name="Complex">Комплексные услуги</string>
    <string name="Additional_services">Дополнительные услуги</string>
    <string name="_590_c">590 c</string>
    <string name="_1000_c">1000 c</string>
    <string name="_1390_c">1390 c</string>
    <string name="_1250_c">1250 c</string>
    <string name="records_kingsmen">Записаться Kingsmen</string>
    <string name="bay">Подтверждение покупки</string>
    <string name="cancel">отмена</string>
    <string name="yes">Да</string>
</resources>