<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night"
    tools:context=".presentation.ui.home.barber.record.RecordFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/free_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/Free_time"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/free_time">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tv_10_00"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_10_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_11_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_12_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_13_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_14_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_15_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_16_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_17_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_18_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_19_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_20_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:text="@string/_21_00"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/Services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/Services"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/free_time"
                app:layout_constraintTop_toBottomOf="@id/container" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/Services">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/montserrat_alternates_extrabold"
                        android:paddingVertical="12dp"
                        android:text="@string/stock"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/ic_arrow_top"
                        android:padding="16dp" />
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_services" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_haircuts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/montserrat_alternates_extrabold"
                        android:paddingVertical="12dp"
                        android:text="@string/haircuts"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/ic_arrow_top"
                        android:padding="16dp" />
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_haircuts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_services" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_shaving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/montserrat_alternates_extrabold"
                        android:paddingVertical="12dp"
                        android:text="@string/shaving"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/ic_arrow_top"
                        android:padding="16dp" />
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shaving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_services" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>